# fastapi-microservice-py

./: .env  Dockerfile  LICENSE  Makefile  README.md  index.html  openapi.json  pyproject.toml  requests.http
.github/workflows/: cd-workflow.yml  ci-workflow.yml
src/: main.py
src/endpoints/: liveness.py  readiness.py
src/model/: state.py  status.py
tests/: conftest.py  test_docs_endpoint.py  test_liveness_endpoint.py  test_metrics_endpoint.py  test_readiness_endpoint.py  utils.py
